feat: implement hybrid dataset combining 3 MITRE sources
- Add hybrid dataset mode combining tumeteor + sarahwei + Zainabsa99 (~16k samples)
- Update data_loader.py with load_hybrid_dataset() function
- Improve label distribution and reduce class imbalance
- Add new evaluation metrics (Recall@K, Precision@K, Example-Based Accuracy)
- Remove misleading metrics (Subset Accuracy, Hamming Loss)
- Update README.md and CTI_MITRE_ATTACK_DATASETS.md with hybrid dataset info
- Update run_strategy_test.ipynb with hybrid mode and new metrics
- Backward compatible: use_hybrid=False for single dataset mode

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -9,6 +9,12 @@
     "\n",
     "Her stratejiyi **bağımsız** olarak test et, sonuçları karşılaştır.\n",
     "\n",
+    "## 📊 Dataset: Hybrid Mode (3 kaynak birleştirildi)\n",
+    "- **tumeteor/Security-TTP-Mapping** (14.9k samples)\n",
+    "- **sarahwei/cyber_MITRE_attack...** (654 samples)\n",
+    "- **Zainabsa99/mitre_attack** (508 samples)\n",
+    "- **Toplam:** ~16k samples, daha dengeli label dağılımı\n",
+    "\n",
     "## 💡 Kullanım:\n",
     "1. Setup hücrelerini çalıştır (1-4)\n",
     "2. İstediğin stratejiyi seç (Strategy 1-5)\n",
@@ -26,6 +32,14 @@
    "source": [
     "## 🔧 SETUP (Her zaman çalıştır)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5620b520",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -163,11 +177,14 @@
     "from torch.utils.data import DataLoader\n",
     "\n",
     "print(\"📥 Veri yükleniyor...\")\n",
+    "print(\"🔥 Hybrid Dataset Mode: tumeteor + sarahwei + Zainabsa99\")\n",
+    "print(\"\")\n",
     "\n",
-    "# Load and prepare data\n",
+    "# Load and prepare data (uses hybrid dataset by default)\n",
     "data = prepare_data(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
-    "    max_length=BASE_CONFIG['max_length']\n",
+    "    max_length=BASE_CONFIG['max_length'],\n",
+    "    use_hybrid=True  # Combines 3 datasets for better label distribution\n",
     ")\n",
     "\n",
     "# Create DataLoaders\n",
@@ -281,8 +298,8 @@
     "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
     "test_results = evaluate_model(\n",
     "    model=model,\n",
-    "    test_dataloader=test_dataloader,\n",
-    "    label_names=strategy_config['label_list'],\n",
+    "    test_dataset=data['test_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    device=BASE_CONFIG['device']\n",
     ")\n",
     "\n",
@@ -295,7 +312,7 @@
     "\n",
     "# Display results\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "print(f\"✅ STRATEGY 1 TAMAMLANDI: {strategy_name}\")\n",
+    "print(f\"✅ STRATEGY 5 TAMAMLANDI: {strategy_name}\")\n",
     "print(\"=\"*60)\n",
     "print(f\"\\n📈 Sonuçlar:\")\n",
     "for metric, value in test_results.items():\n",
@@ -380,8 +397,8 @@
     "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
     "test_results = evaluate_model(\n",
     "    model=model,\n",
-    "    test_dataloader=test_dataloader,\n",
-    "    label_names=strategy_config['label_list'],\n",
+    "    test_dataset=data['test_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    device=BASE_CONFIG['device']\n",
     ")\n",
     "\n",
@@ -480,8 +497,8 @@
     "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
     "test_results = evaluate_model(\n",
     "    model=model,\n",
-    "    test_dataloader=test_dataloader,\n",
-    "    label_names=strategy_config['label_list'],\n",
+    "    test_dataset=data['test_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    device=BASE_CONFIG['device']\n",
     ")\n",
     "\n",
@@ -580,8 +597,8 @@
     "print(\"\\n📊 Test seti değerlendiriliyor...\")\n",
     "test_results = evaluate_model(\n",
     "    model=model,\n",
-    "    test_dataloader=test_dataloader,\n",
-    "    label_names=strategy_config['label_list'],\n",
+    "    test_dataset=data['test_dataset'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    device=BASE_CONFIG['device']\n",
     ")\n",
     "\n",
@@ -876,18 +893,29 @@
     "\n",
     "## 📝 NOTLAR VE ÖNERİLER\n",
     "\n",
+    "**Dataset:**\n",
+    "- Hybrid mode kullanılıyor (tumeteor + sarahwei + Zainabsa99)\n",
+    "- Toplam ~16k sample, daha iyi label coverage\n",
+    "- Tek dataset kullanmak için: `use_hybrid=False` parametresi ekle\n",
+    "\n",
     "**Test Sırası:**\n",
     "1. **Baseline** - Her zaman ilk olarak çalıştırın (referans performans)\n",
-    "2. **Weighted BCE** - En umut verici strateji, F1 > 0.15 bekleniyor\n",
+    "2. **Weighted BCE** - En umut verici strateji, Micro F1 > 0.15 bekleniyor\n",
     "3. Weighted BCE başarılı olursa → Bitti, kullan!\n",
     "4. Weighted BCE başarısız olursa → **Focal Loss (γ=2)** dene\n",
     "5. Hala kötüyse → **Focal Loss (γ=5)** dene\n",
     "6. Hepsi başarısız olursa → **Top-100** ile model öğrenme kapasitesini kontrol et\n",
     "\n",
     "**Başarı Kriterleri:**\n",
-    "- F1 (Top-5) > 0.15 → İyi performans\n",
-    "- F1 (Top-5) > 0.25 → Çok iyi performans\n",
-    "- F1 (Top-5) < 0.10 → Strateji işe yaramadı\n",
+    "- Micro F1 > 0.15 → İyi performans\n",
+    "- Recall@5 > 0.30 → Çok iyi performans\n",
+    "- Micro F1 < 0.10 → Strateji işe yaramadı\n",
+    "\n",
+    "**Metrikler:**\n",
+    "- **Micro F1:** Genel performans (threshold-based)\n",
+    "- **Recall@5:** Top-5 tahmin içinde kaç doğru label var\n",
+    "- **Precision@5:** Top-5 tahminlerin kaçı doğru\n",
+    "- **Example-Based Accuracy:** Tüm label'ların tam eşleşmesi (çok strict)\n",
     "\n",
     "**Süre:**\n",
     "- Her strateji ~30-45 dakika sürer\n",
