--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -107,7 +107,7 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from src.data_loader import prepare_data\n",
+    "from src.data_loader import load_datasets_and_prepare_dataloaders\n",
     "from src.model import load_model\n",
     "from src.train import train_model\n",
     "from src.evaluate import evaluate_model\n",
@@ -174,34 +174,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch.utils.data import DataLoader\n",
-    "\n",
     "print(\"📥 Veri yükleniyor...\")\n",
     "print(\"🔥 Hybrid Dataset Mode: tumeteor + sarahwei + Zainabsa99\")\n",
     "print(\"\")\n",
     "\n",
-    "# Load and prepare data (uses hybrid dataset by default)\n",
-    "data = prepare_data(\n",
+    "# Load datasets and prepare dataloaders\n",
+    "from src.data_loader import load_datasets_and_prepare_dataloaders\n",
+    "\n",
+    "train_dataloader, val_dataloader, test_dataset, label_names = load_datasets_and_prepare_dataloaders(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
+    "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    max_length=BASE_CONFIG['max_length'],\n",
     "    use_hybrid=True  # Combines 3 datasets for better label distribution\n",
     ")\n",
     "\n",
-    "# Create DataLoaders\n",
-    "train_dataloader = DataLoader(\n",
-    "    data['train_dataset'],\n",
-    "    batch_size=BASE_CONFIG['batch_size'],\n",
-    "    shuffle=True\n",
-    ")\n",
+    "# Get train_dataset from dataloader for strategies\n",
+    "train_dataset = train_dataloader.dataset\n",
     "\n",
+    "# Create test dataloader\n",
+    "from torch.utils.data import DataLoader\n",
     "test_dataloader = DataLoader(\n",
-    "    data['test_dataset'],\n",
+    "    test_dataset,\n",
     "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    shuffle=False\n",
     ")\n",
     "\n",
-    "num_labels = data['num_labels']\n",
-    "label_names = data['label_list']\n",
+    "num_labels = len(label_names)\n",
+    "\n",
+    "# Create data dict for backward compatibility\n",
+    "data = {\n",
+    "    'train_dataset': train_dataset,\n",
+    "    'test_dataset': test_dataset,\n",
+    "    'label_list': label_names,\n",
+    "    'num_labels': num_labels\n",
+    "}\n",
     "\n",
     "print(f\"✅ Veri yüklendi\")\n",
     "print(f\"   Train batches: {len(train_dataloader)}\")\n",
