fix: add cleanup and verification to Colab setup
- Remove old clone before re-cloning
- Verify load_datasets_and_prepare_dataloaders exists
- Helps debug import errors

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -72,9 +72,15 @@
     "        print(\"⚠️  GPU bulunamadı! Runtime > Change runtime type > GPU seçin\")\n",
     "    \n",
     "    print(\"\\n📥 Proje indiriliyor...\")\n",
+    "    # Clean up old version first\n",
+    "    !rm -rf Mitre_Attack_TTP_Mapping\n",
     "    !git clone https://github.com/Aliekinozcetin/Mitre_Attack_TTP_Mapping.git\n",
     "    os.chdir('Mitre_Attack_TTP_Mapping')\n",
     "    print(f\"✅ Çalışma dizini: {os.getcwd()}\")\n",
+    "    \n",
+    "    # Verify the function exists\n",
+    "    print(\"\\n🔍 Fonksiyon kontrolü...\")\n",
+    "    !grep -n \"def load_datasets_and_prepare_dataloaders\" src/data_loader.py\n",
     "    \n",
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
