fix: clear import cache before loading modules
- Delete cached src modules before importing
- Ensures latest code is loaded after git clone
- Fixes ImportError in Colab

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -104,6 +104,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clear import cache\n",
+    "import sys\n",
+    "if 'src.data_loader' in sys.modules:\n",
+    "    del sys.modules['src.data_loader']\n",
+    "if 'src.model' in sys.modules:\n",
+    "    del sys.modules['src.model']\n",
+    "if 'src.train' in sys.modules:\n",
+    "    del sys.modules['src.train']\n",
+    "if 'src.evaluate' in sys.modules:\n",
+    "    del sys.modules['src.evaluate']\n",
+    "if 'src.strategies' in sys.modules:\n",
+    "    del sys.modules['src.strategies']\n",
+    "\n",
     "import torch\n",
     "import numpy as np\n",
     "import json\n",
