debug: add function signature check to Colab setup
- Display function parameters to verify correct version
- Helps debug duplicate function definitions

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -82,6 +82,10 @@
     "    print(\"\\n🔍 Fonksiyon kontrolü...\")\n",
     "    !grep -n \"def load_datasets_and_prepare_dataloaders\" src/data_loader.py\n",
     "    \n",
+    "    # Check if function signature is correct\n",
+    "    print(\"\\n🔍 Fonksiyon parametreleri kontrol ediliyor...\")\n",
+    "    !sed -n '304,320p' src/data_loader.py\n",
+    "    \n",
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
     "    print(\"✅ Tüm paketler yüklendi\")\n",
