fix: auto-add missing function in Colab setup
- Check if load_datasets_and_prepare_dataloaders exists
- Auto-add if missing (handles git clone issues)
- Prevents duplicate function errors
- Makes notebook self-healing in Colab

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -72,19 +72,43 @@
     "        print(\"⚠️  GPU bulunamadı! Runtime > Change runtime type > GPU seçin\")\n",
     "    \n",
     "    print(\"\\n📥 Proje indiriliyor...\")\n",
-    "    # Clean up old version first\n",
     "    !rm -rf Mitre_Attack_TTP_Mapping\n",
     "    !git clone https://github.com/Aliekinozcetin/Mitre_Attack_TTP_Mapping.git\n",
     "    os.chdir('Mitre_Attack_TTP_Mapping')\n",
     "    print(f\"✅ Çalışma dizini: {os.getcwd()}\")\n",
     "    \n",
-    "    # Verify the function exists\n",
-    "    print(\"\\n🔍 Fonksiyon kontrolü...\")\n",
-    "    !grep -n \"def load_datasets_and_prepare_dataloaders\" src/data_loader.py\n",
+    "    # Fix: Ensure function exists\n",
+    "    print(\"\\n🔧 Fonksiyon kontrol ve düzeltme...\")\n",
+    "    with open('src/data_loader.py', 'r') as f:\n",
+    "        content = f.read()\n",
     "    \n",
-    "    # Check if function signature is correct\n",
-    "    print(\"\\n🔍 Fonksiyon parametreleri kontrol ediliyor...\")\n",
-    "    !sed -n '304,320p' src/data_loader.py\n",
+    "    if 'def load_datasets_and_prepare_dataloaders(' not in content:\n",
+    "        print(\"⚠️  Fonksiyon bulunamadı, ekleniyor...\")\n",
+    "        fix = '''\n",
+    "\n",
+    "def load_datasets_and_prepare_dataloaders(\n",
+    "    model_name: str = \"bert-base-uncased\",\n",
+    "    batch_size: int = 16,\n",
+    "    max_length: int = 512,\n",
+    "    use_hybrid: bool = True,\n",
+    "    dataset_name: str = \"tumeteor/Security-TTP-Mapping\"\n",
+    "):\n",
+    "    \"\"\"Wrapper for prepare_data.\"\"\"\n",
+    "    from torch.utils.data import DataLoader\n",
+    "    data = prepare_data(model_name=model_name, max_length=max_length, use_hybrid=use_hybrid, dataset_name=dataset_name)\n",
+    "    train_loader = DataLoader(data['train_dataset'], batch_size=batch_size, shuffle=True)\n",
+    "    return (train_loader, None, data['test_dataset'], data['label_list'])\n",
+    "'''\n",
+    "        if 'if __name__ == \"__main__\":' in content:\n",
+    "            content = content.replace('if __name__ == \"__main__\":', fix + '\\n\\nif __name__ == \"__main__\":')\n",
+    "        else:\n",
+    "            content += fix\n",
+    "        \n",
+    "        with open('src/data_loader.py', 'w') as f:\n",
+    "            f.write(content)\n",
+    "        print(\"✅ Fonksiyon eklendi\")\n",
+    "    else:\n",
+    "        print(\"✅ Fonksiyon mevcut\")\n",
     "    \n",
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
