fix: force Python module reload after adding function
- Clear module cache BEFORE file check
- Force importlib.reload after adding function
- Prevents stale cache causing ImportError
- Double reload to ensure fresh import

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -77,6 +77,13 @@
     "    os.chdir('Mitre_Attack_TTP_Mapping')\n",
     "    print(f\"✅ Çalışma dizini: {os.getcwd()}\")\n",
     "    \n",
+    "    # CRITICAL: Clear all Python module cache BEFORE checking\n",
+    "    print(\"\\n🧹 Python modül cache'i temizleniyor...\")\n",
+    "    modules_to_clear = [m for m in sys.modules.keys() if m.startswith('src')]\n",
+    "    for mod in modules_to_clear:\n",
+    "        del sys.modules[mod]\n",
+    "        print(f\"   🗑️  {mod} silindi\")\n",
+    "    \n",
     "    # Fix: Ensure function exists\n",
     "    print(\"\\n🔧 Fonksiyon kontrol ve düzeltme...\")\n",
     "    with open('src/data_loader.py', 'r') as f:\n",
@@ -107,6 +114,14 @@
     "        with open('src/data_loader.py', 'w') as f:\n",
     "            f.write(content)\n",
     "        print(\"✅ Fonksiyon eklendi\")\n",
+    "        \n",
+    "        # FORCE Python to reload the module\n",
+    "        import importlib\n",
+    "        if 'src.data_loader' in sys.modules:\n",
+    "            del sys.modules['src.data_loader']\n",
+    "        import src.data_loader\n",
+    "        importlib.reload(src.data_loader)\n",
+    "        print(\"✅ Modül yeniden yüklendi\")\n",
     "    else:\n",
     "        print(\"✅ Fonksiyon mevcut\")\n",
     "    \n",
@@ -114,7 +129,7 @@
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
     "    print(\"✅ Tüm paketler yüklendi\")\n",
     "else:\n",
-    "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")"
+    "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")\n"
    ]
   },
   {
