fix: add fallback function definition in notebook
CRITICAL SOLUTION for Colab import issues:
- Try importing from src.data_loader first
- If ImportError, define function locally in notebook
- Uses try/except to handle both scenarios
- Eliminates dependency on git sync reliability
- Function always available regardless of import state

This ensures notebook works even if GitHub/Colab sync fails.

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -77,54 +77,6 @@
     "    os.chdir('Mitre_Attack_TTP_Mapping')\n",
     "    print(f\"✅ Çalışma dizini: {os.getcwd()}\")\n",
     "    \n",
-    "    # CRITICAL: Clear all Python module cache BEFORE checking\n",
-    "    print(\"\\n🧹 Python modül cache'i temizleniyor...\")\n",
-    "    modules_to_clear = [m for m in sys.modules.keys() if m.startswith('src')]\n",
-    "    for mod in modules_to_clear:\n",
-    "        del sys.modules[mod]\n",
-    "        print(f\"   🗑️  {mod} silindi\")\n",
-    "    \n",
-    "    # Fix: Ensure function exists\n",
-    "    print(\"\\n🔧 Fonksiyon kontrol ve düzeltme...\")\n",
-    "    with open('src/data_loader.py', 'r') as f:\n",
-    "        content = f.read()\n",
-    "    \n",
-    "    if 'def load_datasets_and_prepare_dataloaders(' not in content:\n",
-    "        print(\"⚠️  Fonksiyon bulunamadı, ekleniyor...\")\n",
-    "        fix = '''\n",
-    "\n",
-    "def load_datasets_and_prepare_dataloaders(\n",
-    "    model_name: str = \"bert-base-uncased\",\n",
-    "    batch_size: int = 16,\n",
-    "    max_length: int = 512,\n",
-    "    use_hybrid: bool = True,\n",
-    "    dataset_name: str = \"tumeteor/Security-TTP-Mapping\"\n",
-    "):\n",
-    "    \"\"\"Wrapper for prepare_data.\"\"\"\n",
-    "    from torch.utils.data import DataLoader\n",
-    "    data = prepare_data(model_name=model_name, max_length=max_length, use_hybrid=use_hybrid, dataset_name=dataset_name)\n",
-    "    train_loader = DataLoader(data['train_dataset'], batch_size=batch_size, shuffle=True)\n",
-    "    return (train_loader, None, data['test_dataset'], data['label_list'])\n",
-    "'''\n",
-    "        if 'if __name__ == \"__main__\":' in content:\n",
-    "            content = content.replace('if __name__ == \"__main__\":', fix + '\\n\\nif __name__ == \"__main__\":')\n",
-    "        else:\n",
-    "            content += fix\n",
-    "        \n",
-    "        with open('src/data_loader.py', 'w') as f:\n",
-    "            f.write(content)\n",
-    "        print(\"✅ Fonksiyon eklendi\")\n",
-    "        \n",
-    "        # FORCE Python to reload the module\n",
-    "        import importlib\n",
-    "        if 'src.data_loader' in sys.modules:\n",
-    "            del sys.modules['src.data_loader']\n",
-    "        import src.data_loader\n",
-    "        importlib.reload(src.data_loader)\n",
-    "        print(\"✅ Modül yeniden yüklendi\")\n",
-    "    else:\n",
-    "        print(\"✅ Fonksiyon mevcut\")\n",
-    "    \n",
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
     "    print(\"✅ Tüm paketler yüklendi\")\n",
@@ -169,7 +121,46 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import DataLoader\n",
     "\n",
-    "from src.data_loader import load_datasets_and_prepare_dataloaders\n",
+    "# Import prepare_data first\n",
+    "from src.data_loader import prepare_data\n",
+    "\n",
+    "# CRITICAL FIX: Define the function HERE if import fails\n",
+    "try:\n",
+    "    from src.data_loader import load_datasets_and_prepare_dataloaders\n",
+    "    print(\"✅ Fonksiyon GitHub'dan import edildi\")\n",
+    "except ImportError:\n",
+    "    print(\"⚠️  GitHub import başarısız, fonksiyon notebook'ta tanımlanıyor...\")\n",
+    "    \n",
+    "    def load_datasets_and_prepare_dataloaders(\n",
+    "        model_name: str = \"bert-base-uncased\",\n",
+    "        batch_size: int = 16,\n",
+    "        max_length: int = 512,\n",
+    "        use_hybrid: bool = True,\n",
+    "        dataset_name: str = \"tumeteor/Security-TTP-Mapping\"\n",
+    "    ):\n",
+    "        \"\"\"Wrapper for prepare_data - notebook fallback version.\"\"\"\n",
+    "        data = prepare_data(\n",
+    "            model_name=model_name,\n",
+    "            max_length=max_length,\n",
+    "            use_hybrid=use_hybrid,\n",
+    "            dataset_name=dataset_name\n",
+    "        )\n",
+    "        \n",
+    "        train_loader = DataLoader(\n",
+    "            data['train_dataset'],\n",
+    "            batch_size=batch_size,\n",
+    "            shuffle=True\n",
+    "        )\n",
+    "        \n",
+    "        return (\n",
+    "            train_loader,\n",
+    "            None,\n",
+    "            data['test_dataset'],\n",
+    "            data['label_list']\n",
+    "        )\n",
+    "    \n",
+    "    print(\"✅ Fallback fonksiyon tanımlandı\")\n",
+    "\n",
     "from src.model import load_model\n",
     "from src.train import train_model\n",
     "from src.evaluate import evaluate_model\n",
@@ -177,7 +168,7 @@
     "\n",
     "print(\"✅ Modüller yüklendi\")\n",
     "print(f\"PyTorch: {torch.__version__}\")\n",
-    "print(f\"CUDA: {torch.cuda.is_available()}\")"
+    "print(f\"CUDA: {torch.cuda.is_available()}\")\n"
    ]
   },
   {
