feat: migrate from BERT-base to CTI-BERT (IBM Research)
MAJOR UPDATE: Switch to domain-specific CTI-BERT model

Model Change:
- OLD: bert-base-uncased (general purpose)
- NEW: ibm-research/CTI-BERT (Cyber Threat Intelligence specialized)

Benefits:
- Pre-trained on security/CTI corpus
- Better understanding of MITRE ATT&CK terminology
- Improved performance on security text classification
- Domain-specific embeddings for cyber threat data

Updated Files:
- src/model.py: CTI-BERT as default, updated docs
- src/data_loader.py: CTI-BERT tokenizer, updated defaults
- run_strategy_test.ipynb: All cells updated to CTI-BERT
- README.md: Model info and references added

Reference: https://huggingface.co/ibm-research/CTI-BERT

Expected Improvements:
- Better rare technique detection
- Higher F1 scores on security vocabulary
- More accurate TTP tagging

BREAKING CHANGE: Default model changed from bert-base-uncased to ibm-research/CTI-BERT

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -5,9 +5,14 @@
    "id": "4fe9927e",
    "metadata": {},
    "source": [
-    "# 🧪 Class Imbalance Strategies - Adım Adım Test\n",
+    "# 🧪 Class Imbalance Strategies - CTI-BERT ile Adım Adım Test\n",
     "\n",
     "Her stratejiyi **bağımsız** olarak test et, sonuçları karşılaştır.\n",
+    "\n",
+    "## 🤖 Model: CTI-BERT (IBM Research)\n",
+    "- **ibm-research/CTI-BERT**: Cyber Threat Intelligence verisiyle önceden eğitilmiş domain-specific BERT\n",
+    "- **Avantaj**: Güvenlik ve CTI metinlerini anlamada genel BERT'ten daha iyi\n",
+    "- **Reference**: https://huggingface.co/ibm-research/CTI-BERT\n",
     "\n",
     "## 📊 Dataset: Hybrid Mode (3 kaynak birleştirildi)\n",
     "- **tumeteor/Security-TTP-Mapping** (14.9k samples)\n",
@@ -22,7 +27,7 @@
     "4. Results Comparison hücresini çalıştır\n",
     "5. Başka bir strateji test et\n",
     "\n",
-    "**Avantaj:** Her stratejiyi ayrı ayrı test edip sonuçları görebilirsin!"
+    "**Avantaj:** Her stratejiyi ayrı ayrı test edip sonuçları görebilirsin!\n"
    ]
   },
   {
@@ -132,7 +137,7 @@
     "    print(\"⚠️  GitHub import başarısız, fonksiyon notebook'ta tanımlanıyor...\")\n",
     "    \n",
     "    def load_datasets_and_prepare_dataloaders(\n",
-    "        model_name: str = \"bert-base-uncased\",\n",
+    "        model_name: str = \"ibm-research/CTI-BERT\",\n",
     "        batch_size: int = 16,\n",
     "        max_length: int = 512,\n",
     "        use_hybrid: bool = True,\n",
@@ -159,7 +164,7 @@
     "            data['label_list']\n",
     "        )\n",
     "    \n",
-    "    print(\"✅ Fallback fonksiyon tanımlandı\")\n",
+    "    print(\"✅ Fallback fonksiyon tanımlandı (CTI-BERT)\")\n",
     "\n",
     "from src.model import load_model\n",
     "from src.train import train_model\n",
@@ -190,7 +195,7 @@
    "source": [
     "# Base training configuration\n",
     "BASE_CONFIG = {\n",
-    "    'model_name': 'bert-base-uncased',\n",
+    "    'model_name': 'ibm-research/CTI-BERT',  # CTI domain-specific BERT\n",
     "    'batch_size': 16,\n",
     "    'learning_rate': 2e-5,\n",
     "    'num_epochs': 3,\n",
@@ -206,8 +211,9 @@
     "all_test_results = {}\n",
     "\n",
     "print(\"✅ Konfigürasyon ayarlandı\")\n",
+    "print(f\"Model: {BASE_CONFIG['model_name']}\")\n",
     "print(f\"Device: {BASE_CONFIG['device']}\")\n",
-    "print(f\"Output: {OUTPUT_DIR.absolute()}\")"
+    "print(f\"Output: {OUTPUT_DIR.absolute()}\")\n"
    ]
   },
   {
@@ -952,6 +958,11 @@
     "\n",
     "## 📝 NOTLAR VE ÖNERİLER\n",
     "\n",
+    "**Model:**\n",
+    "- **CTI-BERT** (ibm-research/CTI-BERT): Cyber Threat Intelligence'a özel BERT\n",
+    "- Güvenlik metinlerinde genel BERT'ten daha iyi performans\n",
+    "- Pre-trained on security-specific corpus\n",
+    "\n",
     "**Dataset:**\n",
     "- Hybrid mode kullanılıyor (tumeteor + sarahwei + Zainabsa99)\n",
     "- Toplam ~16k sample, daha iyi label coverage\n",
@@ -970,6 +981,11 @@
     "- Recall@5 > 0.30 → Çok iyi performans\n",
     "- Micro F1 < 0.10 → Strateji işe yaramadı\n",
     "\n",
+    "**CTI-BERT ile Beklenen İyileşmeler:**\n",
+    "- Cyber security terminolojisini daha iyi anlama\n",
+    "- MITRE ATT&CK kavramlarında daha yüksek accuracy\n",
+    "- Rare technique'leri daha iyi tanıma\n",
+    "\n",
     "**Metrikler:**\n",
     "- **Micro F1:** Genel performans (threshold-based)\n",
     "- **Recall@5:** Top-5 tahmin içinde kaç doğru label var\n",
@@ -978,12 +994,14 @@
     "\n",
     "**Süre:**\n",
     "- Her strateji ~30-45 dakika sürer\n",
+    "- CTI-BERT model download ilk seferde ~5 dakika ekstra\n",
     "- Modular yaklaşım sayesinde istediğiniz zaman durup sonuçlara bakabilirsiniz\n",
     "\n",
     "**Hatırlatmalar:**\n",
     "- Herbir strateji hücresi bağımsızdır, istediğiniz sırada çalıştırabilirsiniz\n",
     "- Sonuçlar `all_test_results` dictionary'sinde saklanır\n",
-    "- Comparison hücresini dilediğiniz zaman çalıştırıp ara sonuçlara bakabilirsiniz"
+    "- Comparison hücresini dilediğiniz zaman çalıştırıp ara sonuçlara bakabilirsiniz\n",
+    "- CTI-BERT ilk indirilirken cache'lenir, sonraki çalıştırmalar hızlıdır\n"
    ]
   }
  ],
