fix: remove duplicate import in data loading cell
- Cell 5 already imports/defines load_datasets_and_prepare_dataloaders
- Cell 9 was trying to re-import, causing ImportError in Colab
- Now uses function from cell 5 (fallback or GitHub import)
- Added model name to output for clarity

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -235,11 +235,10 @@
    "source": [
     "print(\"📥 Veri yükleniyor...\")\n",
     "print(\"🔥 Hybrid Dataset Mode: tumeteor + sarahwei + Zainabsa99\")\n",
+    "print(f\"🤖 Model: {BASE_CONFIG['model_name']}\")\n",
     "print(\"\")\n",
     "\n",
-    "# Load datasets and prepare dataloaders\n",
-    "from src.data_loader import load_datasets_and_prepare_dataloaders\n",
-    "\n",
+    "# Use the function already imported/defined in cell 5\n",
     "train_dataloader, val_dataloader, test_dataset, label_names = load_datasets_and_prepare_dataloaders(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    batch_size=BASE_CONFIG['batch_size'],\n",
@@ -251,7 +250,6 @@
     "train_dataset = train_dataloader.dataset\n",
     "\n",
     "# Create test dataloader\n",
-    "from torch.utils.data import DataLoader\n",
     "test_dataloader = DataLoader(\n",
     "    test_dataset,\n",
     "    batch_size=BASE_CONFIG['batch_size'],\n",
@@ -272,7 +270,7 @@
     "print(f\"   Train batches: {len(train_dataloader)}\")\n",
     "print(f\"   Test batches: {len(test_dataloader)}\")\n",
     "print(f\"   Toplam label sayısı: {num_labels}\")\n",
-    "print(f\"   İlk 5 label: {label_names[:5]}\")"
+    "print(f\"   İlk 5 label: {label_names[:5]}\")\n"
    ]
   },
   {
