config: switch to single dataset (tumeteor only)
- Changed from hybrid to single dataset mode
- Using only tumeteor/Security-TTP-Mapping (14.9k samples)
- Consistent MITRE ATT&CK technique labels
- Avoids mixed tactics/techniques issue
- Updated documentation

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -14,11 +14,10 @@
     "- **Avantaj**: Güvenlik ve CTI metinlerini anlamada genel BERT'ten daha iyi\n",
     "- **Reference**: https://huggingface.co/ibm-research/CTI-BERT\n",
     "\n",
-    "## 📊 Dataset: Hybrid Mode (3 kaynak birleştirildi)\n",
-    "- **tumeteor/Security-TTP-Mapping** (14.9k samples)\n",
-    "- **sarahwei/cyber_MITRE_attack...** (654 samples)\n",
-    "- **Zainabsa99/mitre_attack** (508 samples)\n",
-    "- **Toplam:** ~16k samples, daha dengeli label dağılımı\n",
+    "## 📊 Dataset: Single Source\n",
+    "- **tumeteor/Security-TTP-Mapping** (14.9k train + 2.6k test)\n",
+    "- **Özellik**: MITRE ATT&CK technique ID'leri (T-codes)\n",
+    "- **Avantaj**: Tutarlı label format, yüksek kalite\n",
     "\n",
     "## 💡 Kullanım:\n",
     "1. Setup hücrelerini çalıştır (1-4)\n",
@@ -234,16 +233,17 @@
    "outputs": [],
    "source": [
     "print(\"📥 Veri yükleniyor...\")\n",
-    "print(\"🔥 Hybrid Dataset Mode: tumeteor + sarahwei + Zainabsa99\")\n",
+    "print(\"📦 Dataset: tumeteor/Security-TTP-Mapping (Single Source)\")\n",
     "print(f\"🤖 Model: {BASE_CONFIG['model_name']}\")\n",
     "print(\"\")\n",
     "\n",
-    "# Use the function already imported/defined in cell 5\n",
+    "# Use single dataset: tumeteor only\n",
     "train_dataloader, val_dataloader, test_dataset, label_names = load_datasets_and_prepare_dataloaders(\n",
     "    model_name=BASE_CONFIG['model_name'],\n",
     "    batch_size=BASE_CONFIG['batch_size'],\n",
     "    max_length=BASE_CONFIG['max_length'],\n",
-    "    use_hybrid=True  # Combines 3 datasets for better label distribution\n",
+    "    use_hybrid=False,  # Single dataset: tumeteor only\n",
+    "    dataset_name=\"tumeteor/Security-TTP-Mapping\"\n",
     ")\n",
     "\n",
     "# Get train_dataset from dataloader for strategies\n",
