fix: integrate HF settings into setup cell & fix progress bar
- Merged HuggingFace optimization into Colab setup (cell 4)
- Removed separate troubleshooting cells (cleaner notebook)
- Fixed tqdm progress bar: leave=True prevents multiple bars
- Added dynamic_ncols for better display in Colab
- Progress bar now updates in-place instead of creating new lines

--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -84,71 +84,18 @@
     "    print(\"\\n📦 Paketler yükleniyor...\")\n",
     "    !pip install -q torch transformers datasets scikit-learn pandas tqdm matplotlib seaborn\n",
     "    print(\"✅ Tüm paketler yüklendi\")\n",
+    "    \n",
+    "    # HuggingFace bağlantı optimizasyonu\n",
+    "    print(\"\\n🔧 HuggingFace ayarları yapılandırılıyor...\")\n",
+    "    os.environ['HF_HOME'] = '/content/hf_cache'\n",
+    "    os.environ['TRANSFORMERS_CACHE'] = '/content/hf_cache'\n",
+    "    os.environ['HF_DATASETS_CACHE'] = '/content/hf_cache'\n",
+    "    os.environ['HF_HUB_DOWNLOAD_TIMEOUT'] = '300'\n",
+    "    os.environ['CURL_CA_BUNDLE'] = ''\n",
+    "    os.environ['HF_ENDPOINT'] = 'https://huggingface.co'\n",
+    "    print(\"✅ Cache ve timeout ayarları tamamlandı\")\n",
     "else:\n",
     "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08b49be9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# SADECE MODEL YÜKLEME SORUNU VARSA ÇALIŞTIR\n",
-    "# Bu hücre HuggingFace bağlantı sorunlarını çözer\n",
-    "\n",
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "# 1. DNS ve bağlantı ayarlarını optimize et\n",
-    "print(\"🔧 HuggingFace bağlantı optimizasyonu...\")\n",
-    "\n",
-    "# 2. Transformers cache ayarları\n",
-    "os.environ['HF_HOME'] = '/content/hf_cache'\n",
-    "os.environ['TRANSFORMERS_CACHE'] = '/content/hf_cache'\n",
-    "os.environ['HF_DATASETS_CACHE'] = '/content/hf_cache'\n",
-    "\n",
-    "# 3. Bağlantı timeout'larını artır\n",
-    "os.environ['HF_HUB_DOWNLOAD_TIMEOUT'] = '300'  # 5 dakika\n",
-    "os.environ['CURL_CA_BUNDLE'] = ''\n",
-    "\n",
-    "# 4. HTTP yerine HTTPS zorunlu kıl\n",
-    "os.environ['HF_ENDPOINT'] = 'https://huggingface.co'\n",
-    "\n",
-    "print(\"✅ Ayarlar yapıldı\")\n",
-    "print(f\"Cache dizini: {os.environ['HF_HOME']}\")\n",
-    "\n",
-    "# 5. Test: HuggingFace'e erişim kontrolü\n",
-    "try:\n",
-    "    from huggingface_hub import HfApi\n",
-    "    api = HfApi()\n",
-    "    print(\"\\n📡 HuggingFace bağlantı testi...\")\n",
-    "    info = api.model_info(\"ibm-research/CTI-BERT\")\n",
-    "    print(f\"✅ Model bulundu: {info.modelId}\")\n",
-    "    print(f\"   Model boyutu: ~498 MB\")\n",
-    "    print(f\"   Son güncelleme: {info.lastModified}\")\n",
-    "except Exception as e:\n",
-    "    print(f\"⚠️  Bağlantı sorunu: {str(e)[:200]}\")\n",
-    "    print(\"\\n💡 ÇÖZÜMLEMLER:\")\n",
-    "    print(\"1. Runtime > Restart session yapın\")\n",
-    "    print(\"2. Internet bağlantınızı kontrol edin\")\n",
-    "    print(\"3. VPN kullanıyorsanız kapatın/değiştirin\")\n",
-    "    print(\"4. Farklı bir Colab runtime deneyin\")\n",
-    "\n",
-    "# 6. Manuel indirme alternatifi (en son çare)\n",
-    "print(\"\\n💡 ALTERNATIF: Manuel model indirme\")\n",
-    "print(\"Eğer otomatik indirme çalışmazsa:\")\n",
-    "print(\"!wget https://huggingface.co/ibm-research/CTI-BERT/resolve/main/pytorch_model.bin -O /content/hf_cache/pytorch_model.bin\")\n",
-    "print(\"!wget https://huggingface.co/ibm-research/CTI-BERT/resolve/main/config.json -O /content/hf_cache/config.json\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6d9c3370",
-   "metadata": {},
-   "source": [
-    "### 1.5 Fix Hugging Face Connection (Opsiyonel - sadece model yükleme sorunu varsa)"
    ]
   },
   {
