--- a/run_strategy_test.ipynb
+++ b/run_strategy_test.ipynb
@@ -86,16 +86,36 @@
     "    print(\"✅ Tüm paketler yüklendi\")\n",
     "    \n",
     "    # HuggingFace bağlantı optimizasyonu\n",
-    "    print(\"\\n🔧 HuggingFace ayarları yapılandırılıyor...\")\n",
-    "    os.environ['HF_HOME'] = '/content/hf_cache'\n",
-    "    os.environ['TRANSFORMERS_CACHE'] = '/content/hf_cache'\n",
-    "    os.environ['HF_DATASETS_CACHE'] = '/content/hf_cache'\n",
-    "    os.environ['HF_HUB_DOWNLOAD_TIMEOUT'] = '300'\n",
+    "    print(\"\\n🔧 HuggingFace cache ayarları...\")\n",
+    "    \n",
+    "    # Create cache directory\n",
+    "    cache_dir = '/content/hf_cache'\n",
+    "    os.makedirs(cache_dir, exist_ok=True)\n",
+    "    \n",
+    "    # Set environment variables\n",
+    "    os.environ['HF_HOME'] = cache_dir\n",
+    "    os.environ['TRANSFORMERS_CACHE'] = cache_dir\n",
+    "    os.environ['HF_DATASETS_CACHE'] = cache_dir\n",
+    "    os.environ['HF_HUB_DOWNLOAD_TIMEOUT'] = '600'  # 10 minutes\n",
     "    os.environ['CURL_CA_BUNDLE'] = ''\n",
     "    os.environ['HF_ENDPOINT'] = 'https://huggingface.co'\n",
-    "    print(\"✅ Cache ve timeout ayarları tamamlandı\")\n",
+    "    os.environ['HF_HUB_ENABLE_HF_TRANSFER'] = '1'  # Faster downloads\n",
+    "    \n",
+    "    print(f\"✅ Cache dizini oluşturuldu: {cache_dir}\")\n",
+    "    print(f\"   Timeout: 10 dakika\")\n",
+    "    \n",
+    "    # Test HuggingFace connection\n",
+    "    try:\n",
+    "        from huggingface_hub import HfApi\n",
+    "        api = HfApi()\n",
+    "        print(\"\\n📡 HuggingFace bağlantı testi...\")\n",
+    "        info = api.model_info(\"ibm-research/CTI-BERT\", timeout=30)\n",
+    "        print(f\"✅ Model erişilebilir: {info.modelId}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️  Bağlantı uyarısı: {str(e)[:100]}\")\n",
+    "        print(\"   Model indirme denemeye devam edilecek...\")\n",
     "else:\n",
-    "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")\n"
+    "    print(\"ℹ️  Yerel ortamda çalışıyorsunuz\")"
    ]
   },
   {
